crates/carta/tests/snapshots/golden_wrap__beamer__common__soft-break__preserve.snap
---
source: crates/carta/tests/golden_wrap.rs
expression: output
---
\begin{frame}
first line
second line
\end{frame}
